# HaskellPrograms

./: .gitignore  README.md
Ex01/: Ex01.cabal  Ex01.hs
Ex02/: Art.cabal  Art.hs  Ex02.hs
Ex03/: Ex03.hs
Ex04/: Ex04.cap.hs  Ex04.hs  Exercise04.cap.hs  Exercise04.hs  num3.txt  num4.txt
Ex05/: Ex05.hs  TestEval.hs  TestEvalSimple.hs  TestValidity.hs
Ex06/: Ex06.hs  TestProp.hs
Ex07/: Ex07.hs  TestPrintf.hs
Ex08/: Ex08.hs
Ex09/: Ex09.hs
